cc: HUD handle context lost in Gpu raster.

This returns the resource id in case the HUD canvas
is invalid, because of context loss while SkSurface
creation. The resource is subsequently evicted from
quad list.

BUG=736127
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

patch from issue 2961633002 at patchset 160001 (http://crrev.com/2961633002#ps160001)