cc/layers/heads_up_display_layer_impl.h
@@ -43,9 +43,11 @@ class CC_EXPORT HeadsUpDisplayLayerImpl : public LayerImpl {
                 ResourceProvider* resource_provider) override;
   void AppendQuads(RenderPass* render_pass,
                    AppendQuadsData* append_quads_data) override;
+
   void UpdateHudTexture(DrawMode draw_mode,
                         ResourceProvider* resource_provider,
-                        ContextProvider* context_provider);
+                        ContextProvider* context_provider,
+                        const RenderPassList& list);
 
   void ReleaseResources() override;
 
@@ -54,6 +56,9 @@ class CC_EXPORT HeadsUpDisplayLayerImpl : public LayerImpl {
   bool IsAnimatingHUDContents() const { return fade_step_ > 0; }
 
   void SetHUDTypeface(sk_sp<SkTypeface> typeface);
+
+  // This evicts hud quad appended during render pass preparation.
+  void EvictHudQuad(const RenderPassList& list);
 
   // LayerImpl overrides.
   void PushPropertiesTo(LayerImpl* layer) override;
